Add code to hide h1

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,17 @@ img {
     max-width: 100%;
 }
 
+/* Visually hidden h1 */
+.sr-only {
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%); 
+  height: 1px; 
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 /* Card styling*/
 .blog-card {
     max-width: 24rem;
